Fixed spacing in form

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ fieldset {
   gap: 15px;
   padding: 10px;
   border: none;
+  align-items: center;
 }
 
 legend {
@@ -58,7 +59,6 @@ legend {
 }
 
 label {
-  margin-left: 100px;
   font-size: 1.2rem;
 }
 
@@ -66,7 +66,7 @@ input[type="text"],
 textarea {
   background-color: #000;
   border: none;
-  width: 70%;
+  width: 100%;
   align-self: center;
   text-align: center;
   justify-self: center;
@@ -82,6 +82,20 @@ textarea {
   height: 6rem;
 }
 
+.input-set {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 70%;
+}
+.input-set.text {
+  height: 120px;
+}
+
+.input-set.textarea {
+  height: 170px;
+}
+
 input:focus,
 textarea:focus {
   box-shadow: 0 0 20px rgba(255, 249, 61, 0.746);
@@ -89,13 +103,13 @@ textarea:focus {
 }
 
 form button {
+  margin-top: 1rem;
   align-self: center;
 }
 
 .chars-left {
   align-self: flex-end;
   text-align: right;
-  margin-right: 105px;
   font-style: italic;
   color: #1e0141;
 }
